# identizy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  HACKATHON_GUIDELINES.md  Makefile  README.md  RESOURCES.md  package-lock.json  package.json
.github/workflows/: sync-lovable.yml
circuits/age_verifier/: age_verifier.circom  input.json  verification_key.json
contracts/age_verifier/: Cargo.toml
contracts/age_verifier/src/: lib.rs  test.rs
contracts/soulbound_nft/: Cargo.toml
contracts/soulbound_nft/src/: lib.rs  test.rs
demo_content/: identizy_pitch_deck_prompt.md  pitch-deck_link.md  pitch_deck_prompt.md  promotional_vídeo_link.md  video_script.md  youtube_product_demo_description.md  youtube_promo_description.md
docs/: IDENTIZY_FLOW.md  monetization_plan.md  project_description_monetization.md  security_audit.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/public/circuits/: age_verifier.wasm  circuit_final.zkey
frontend/src/: App.tsx  main.tsx  snarkjs.d.ts
frontend/src/contexts/: LanguageContext.tsx  StellarWalletContext.tsx
frontend/src/hooks/: useWallet.tsx
frontend/src/pages/: Auth.tsx  CreateAttestation.tsx  Dashboard.tsx  Landing.tsx  ProofGeneration.tsx  WalletConnect.tsx
frontend/src/services/: soulboundNft.ts  stellar.ts  zkProof.ts
scripts/: add_usdc_trustline.js  address_to_field.js  convert_vk.js  debug_verify.js  generate_proof.js  initialize_contract.js  setup.sh  sign_commitment.js
supabase/functions/sign-commitment/: index.ts
worker/: index.ts  wrangler.toml
(+8 files in other folders)
